# llm_rust_article_1

./: .gitignore  Cargo.toml  README.md
categorize/: Cargo.toml
categorize/src/: main.rs
load_data/: Cargo.toml
load_data/src/: lib.rs
part2/: README.md
part2/analyze_with_polars/: Cargo.toml  categories-wip.csv  category-count.csv
part2/analyze_with_polars/src/: main.rs
part2/categorize2/: Cargo.toml
part2/categorize2/src/: asn_list.rs  categories.rs  llm.rs  main.rs  scraping.rs  success_fail.rs
src/: main.rs
