[package]
name = "ai_article_1"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
csv = "1.3.0"
serde = { version = "1.0.204", features = ["derive"] }
anyhow = "1.0.86"
itertools = "0.13.0"
tokio = { version = "1.10.0", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.120"
rand = "0.8.5"

[workspace]
members = [ "categorize",
    "load_data",
]
